versions/v2.8/modules/en/pages/observability/istio/configuration/pod-security-policies.adoc
= Enable Istio with Pod Security Policies
:revdate: 2024-09-26
:page-revdate: {revdate}
:experimental:

If you have restrictive Pod Security Policies enabled, then Istio may not be able to function correctly, because it needs certain permissions in order to install itself and manage pod infrastructure. In this section, we will configure a cluster with PSPs enabled for an Istio install, and also set up the Istio CNI plugin.

The Istio CNI plugin removes the need for each application pod to have a privileged `NET_ADMIN` container. For further information, see the https://istio.io/docs/setup/additional-setup/cni[Istio CNI Plugin docs]. Please note that the https://istio.io/about/feature-stages/[Istio CNI Plugin is in alpha].

[NOTE]
.Prerequisites:
====

* The cluster must be an RKE Kubernetes cluster.
* The cluster must have been created with a default PodSecurityPolicy.

To enable pod security policy support when creating a Kubernetes cluster in the Rancher UI, go to *Advanced Options.* In the *Pod Security Policy Support* section, click *Enabled.* Then select a default pod security policy.
====


. <<_1_set_the_podsecuritypolicy_to_unrestricted,Set the PodSecurityPolicy to unrestricted>>
. <<_2_enable_the_cni,Enable the CNI>>
. <<_3_verify_that_the_cni_is_working,Verify that the CNI is working.>>

== 1. Set the PodSecurityPolicy to unrestricted

An unrestricted PSP allows Istio to be installed.

Set the PSP to `unrestricted` in the project where is Istio is installed, or the project where you plan to install Istio.

. Click *☰ > Cluster Management*.
. Go to the cluster that you created and click *Explore*.
. Click menu:Cluster[Projects/Namespaces].
. Find the *Project: System* and select the *⋮ > Edit Config*.
. Change the Pod Security Policy option to be unrestricted, then click *Save*.

== 2. Enable the CNI

When installing or upgrading Istio through *Apps,*

. Click *Components*.
. Check the box next to *Enabled CNI*.
. Finish installing or upgrading Istio.

The CNI can also be enabled by editing the `values.yaml`:

----
istio_cni.enabled: true
----

Istio should install successfully with the CNI enabled in the cluster.

== 3. Verify that the CNI is working

Verify that the CNI is working by deploying a https://istio.io/latest/docs/examples/bookinfo/[sample application] or deploying one of your own applications.
